--- a/_pages/research.html
+++ b/_pages/research.html
@@ -9,5 +9,5 @@ author_profile: true
 
 
 {% for post in site.research %}
-  {% include interactive.html %}
+  {% include archive-single.html %}
 {% endfor %}
