--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,13 +1,12 @@
 ---
-layout: interactive
+layout: default
 title: "Research"
 permalink: /research/
-author_profile: true
 ---
 
-{% include base_path %}
-
-
-{% for post in site.research %}
-  {% include archive-single.html %}
-{% endfor %}
+<div id="main" role="main">
+  <h1 class="page__title">{{ page.title }}</h1>
+  
+  <!-- Embed the interactive HTML file using an iframe -->
+  <iframe src="{{ "/files/map_2024.html" | relative_url }}" width="100%" height="600px" frameborder="0"></iframe>
+</div>
